Fix swagger errors - second part
